python-compiler/tests/snapshots/strings__mixed_print_types.snap
---
source: tests/strings.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@str_literal = private unnamed_addr constant [7 x i8] c"String\00", align 1
@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@int_format_string.1 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string.2 = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string.3 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@int_format_string.4 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string.5 = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string.6 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@str_literal.7 = private unnamed_addr constant [15 x i8] c"Another string\00", align 1
@int_format_string.8 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string.9 = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string.10 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

define i32 @main() {
entry:
  %malloc_str = call ptr @malloc(i64 7)
  %memcpy_str = call ptr @memcpy(ptr %malloc_str, ptr @str_literal, i64 7)
  %ptr_to_int = ptrtoint ptr %malloc_str to i64
  %ptr_payload = and i64 %ptr_to_int, 281474976710655
  %pyobject_string = or i64 9221683186994511872, %ptr_payload
  %check_qnan = and i64 %pyobject_string, 9221120237041090560
  %is_float = icmp ne i64 %check_qnan, 9221120237041090560
  %tag_bits = and i64 %pyobject_string, 1970324836974592
  %tag = lshr i64 %tag_bits, 48
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %map_bool = select i1 %is_bool, i64 2, i64 %tag
  %map_string = select i1 %is_string, i64 3, i64 %map_bool
  %map_list = select i1 %is_list, i64 4, i64 %map_string
  %final_tag = select i1 %is_float, i64 1, i64 %map_list
  %check_qnan1 = and i64 %pyobject_string, 9221120237041090560
  %is_float2 = icmp ne i64 %check_qnan1, 9221120237041090560
  %i64_to_f64 = bitcast i64 %pyobject_string to double
  %extract_payload = and i64 %pyobject_string, 281474976710655
  %sign_bit = lshr i64 %extract_payload, 47
  %is_negative = icmp eq i64 %sign_bit, 1
  %sign_extend = or i64 %extract_payload, -281474976710656
  %signed_payload = select i1 %is_negative, i64 %sign_extend, i64 %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float2, double %i64_to_f64, double %payload_to_f64
  %is_int = icmp eq i64 %final_tag, 0
  %is_string3 = icmp eq i64 %final_tag, 3
  br i1 %is_string3, label %print_string, label %check_int

check_int:                                        ; preds = %entry
  br i1 %is_int, label %print_int, label %print_float

print_int:                                        ; preds = %check_int
  %to_int = fptosi double %final_payload to i64
  %printf_int = call i32 (ptr, ...) @printf(ptr @int_format_string, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %check_int
  %printf_float = call i32 (ptr, ...) @printf(ptr @float_format_string, double %final_payload)
  br label %print_end

print_string:                                     ; preds = %entry
  %extract_ptr_payload = and i64 %pyobject_string, 281474976710655
  %payload_to_ptr = inttoptr i64 %extract_ptr_payload to ptr
  %printf_string = call i32 (ptr, ...) @printf(ptr @string_format_string, ptr %payload_to_ptr)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  br i1 false, label %print_string7, label %check_int4

check_int4:                                       ; preds = %print_end
  br i1 true, label %print_int5, label %print_float6

print_int5:                                       ; preds = %check_int4
  %printf_int9 = call i32 (ptr, ...) @printf(ptr @int_format_string.1, i64 42)
  br label %print_end8

print_float6:                                     ; preds = %check_int4
  %printf_float10 = call i32 (ptr, ...) @printf(ptr @float_format_string.2, double 4.200000e+01)
  br label %print_end8

print_string7:                                    ; preds = %print_end
  %printf_string11 = call i32 (ptr, ...) @printf(ptr @string_format_string.3, ptr inttoptr (i64 42 to ptr))
  br label %print_end8

print_end8:                                       ; preds = %print_string7, %print_float6, %print_int5
  br i1 false, label %print_string15, label %check_int12

check_int12:                                      ; preds = %print_end8
  br i1 false, label %print_int13, label %print_float14

print_int13:                                      ; preds = %check_int12
  %printf_int17 = call i32 (ptr, ...) @printf(ptr @int_format_string.4, i64 3)
  br label %print_end16

print_float14:                                    ; preds = %check_int12
  %printf_float18 = call i32 (ptr, ...) @printf(ptr @float_format_string.5, double 3.140000e+00)
  br label %print_end16

print_string15:                                   ; preds = %print_end8
  %printf_string19 = call i32 (ptr, ...) @printf(ptr @string_format_string.6, ptr inttoptr (i64 33776997205279 to ptr))
  br label %print_end16

print_end16:                                      ; preds = %print_string15, %print_float14, %print_int13
  %malloc_str20 = call ptr @malloc(i64 15)
  %memcpy_str21 = call ptr @memcpy(ptr %malloc_str20, ptr @str_literal.7, i64 15)
  %ptr_to_int22 = ptrtoint ptr %malloc_str20 to i64
  %ptr_payload23 = and i64 %ptr_to_int22, 281474976710655
  %pyobject_string24 = or i64 9221683186994511872, %ptr_payload23
  %check_qnan25 = and i64 %pyobject_string24, 9221120237041090560
  %is_float26 = icmp ne i64 %check_qnan25, 9221120237041090560
  %tag_bits27 = and i64 %pyobject_string24, 1970324836974592
  %tag28 = lshr i64 %tag_bits27, 48
  %is_bool29 = icmp eq i64 %tag28, 1
  %is_string30 = icmp eq i64 %tag28, 2
  %is_list31 = icmp eq i64 %tag28, 3
  %map_bool32 = select i1 %is_bool29, i64 2, i64 %tag28
  %map_string33 = select i1 %is_string30, i64 3, i64 %map_bool32
  %map_list34 = select i1 %is_list31, i64 4, i64 %map_string33
  %final_tag35 = select i1 %is_float26, i64 1, i64 %map_list34
  %check_qnan36 = and i64 %pyobject_string24, 9221120237041090560
  %is_float37 = icmp ne i64 %check_qnan36, 9221120237041090560
  %i64_to_f6438 = bitcast i64 %pyobject_string24 to double
  %extract_payload39 = and i64 %pyobject_string24, 281474976710655
  %sign_bit40 = lshr i64 %extract_payload39, 47
  %is_negative41 = icmp eq i64 %sign_bit40, 1
  %sign_extend42 = or i64 %extract_payload39, -281474976710656
  %signed_payload43 = select i1 %is_negative41, i64 %sign_extend42, i64 %extract_payload39
  %payload_to_f6444 = sitofp i64 %signed_payload43 to double
  %final_payload45 = select i1 %is_float37, double %i64_to_f6438, double %payload_to_f6444
  %is_int46 = icmp eq i64 %final_tag35, 0
  %is_string47 = icmp eq i64 %final_tag35, 3
  br i1 %is_string47, label %print_string51, label %check_int48

check_int48:                                      ; preds = %print_end16
  br i1 %is_int46, label %print_int49, label %print_float50

print_int49:                                      ; preds = %check_int48
  %to_int53 = fptosi double %final_payload45 to i64
  %printf_int54 = call i32 (ptr, ...) @printf(ptr @int_format_string.8, i64 %to_int53)
  br label %print_end52

print_float50:                                    ; preds = %check_int48
  %printf_float55 = call i32 (ptr, ...) @printf(ptr @float_format_string.9, double %final_payload45)
  br label %print_end52

print_string51:                                   ; preds = %print_end16
  %extract_ptr_payload56 = and i64 %pyobject_string24, 281474976710655
  %payload_to_ptr57 = inttoptr i64 %extract_ptr_payload56 to ptr
  %printf_string58 = call i32 (ptr, ...) @printf(ptr @string_format_string.10, ptr %payload_to_ptr57)
  br label %print_end52

print_end52:                                      ; preds = %print_string51, %print_float50, %print_int49
  ret i32 0
}

declare ptr @malloc(i64)

declare ptr @memcpy(ptr, ptr, i64)

declare i32 @printf(ptr, ...)
