python-compiler/tests/snapshots/strings__string_concat_and_len.snap
---
source: tests/strings.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@str_literal = private unnamed_addr constant [6 x i8] c"Hello\00", align 1
@str_literal.1 = private unnamed_addr constant [7 x i8] c" World\00", align 1
@int_format_string.2 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

; Function Attrs: nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  %malloc_str = tail call dereferenceable_or_null(6) ptr @malloc(i64 6)
  tail call void @llvm.memcpy.p0.p0.i64(ptr noundef nonnull align 1 dereferenceable(6) %malloc_str, ptr noundef nonnull align 1 dereferenceable(6) @str_literal, i64 6, i1 false)
  %malloc_str1 = tail call dereferenceable_or_null(7) ptr @malloc(i64 7)
  tail call void @llvm.memcpy.p0.p0.i64(ptr noundef nonnull align 1 dereferenceable(7) %malloc_str1, ptr noundef nonnull align 1 dereferenceable(7) @str_literal.1, i64 7, i1 false)
  %ptr_to_int3 = ptrtoint ptr %malloc_str1 to i64
  %ptr_payload4 = and i64 %ptr_to_int3, 281474976710655
  %ptr_to_int = ptrtoint ptr %malloc_str to i64
  %ptr_payload = and i64 %ptr_to_int, 281474976710655
  %payload_to_ptr = inttoptr i64 %ptr_payload to ptr
  %payload_to_ptr20 = inttoptr i64 %ptr_payload4 to ptr
  %lhs_len = tail call i64 @strlen(ptr noundef nonnull dereferenceable(1) %payload_to_ptr)
  %rhs_len = tail call i64 @strlen(ptr noundef nonnull dereferenceable(1) %payload_to_ptr20)
  %total_len = add i64 %rhs_len, 1
  %total_size = add i64 %total_len, %lhs_len
  %malloc_concat = tail call ptr @malloc(i64 %total_size)
  tail call void @llvm.memcpy.p0.p0.i64(ptr align 1 %malloc_concat, ptr align 1 %payload_to_ptr, i64 %lhs_len, i1 false)
  %rhs_dest = getelementptr i8, ptr %malloc_concat, i64 %lhs_len
  tail call void @llvm.memcpy.p0.p0.i64(ptr align 1 %rhs_dest, ptr align 1 %payload_to_ptr20, i64 %total_len, i1 false)
  %ptr_to_int21 = ptrtoint ptr %malloc_concat to i64
  %ptr_payload22 = and i64 %ptr_to_int21, 281474976710655
  %payload_to_ptr63 = inttoptr i64 %ptr_payload22 to ptr
  %puts = tail call i32 @puts(ptr nonnull dereferenceable(1) %payload_to_ptr63)
  %strlen = tail call i64 @strlen(ptr noundef nonnull dereferenceable(1) %payload_to_ptr63)
  %int_payload = and i64 %strlen, 281474976710655
  %is_negative99.not = icmp ult i64 %int_payload, 140737488355328
  %masksel = select i1 %is_negative99.not, i64 0, i64 -281474976710656
  %signed_payload101 = or disjoint i64 %masksel, %int_payload
  %payload_to_f64102 = sitofp i64 %signed_payload101 to double
  %to_int111 = fptosi double %payload_to_f64102 to i64
  %printf_int112 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string.2, i64 %to_int111)
  tail call void @free(ptr %malloc_str)
  tail call void @free(ptr %malloc_str1)
  ret i32 0
}

; Function Attrs: mustprogress nofree nounwind willreturn allockind("alloc,uninitialized") allocsize(0) memory(inaccessiblemem: readwrite)
declare noalias noundef ptr @malloc(i64 noundef) local_unnamed_addr #1

; Function Attrs: mustprogress nofree nounwind willreturn memory(argmem: read)
declare i64 @strlen(ptr nocapture) local_unnamed_addr #2

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #3

; Function Attrs: mustprogress nounwind willreturn allockind("free") memory(argmem: readwrite, inaccessiblemem: readwrite)
declare void @free(ptr allocptr nocapture noundef) local_unnamed_addr #4

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias nocapture writeonly, ptr noalias nocapture readonly, i64, i1 immarg) #5

; Function Attrs: nofree nounwind
declare noundef i32 @puts(ptr nocapture noundef readonly) local_unnamed_addr #3

attributes #0 = { nounwind }
attributes #1 = { mustprogress nofree nounwind willreturn allockind("alloc,uninitialized") allocsize(0) memory(inaccessiblemem: readwrite) "alloc-family"="malloc" }
attributes #2 = { mustprogress nofree nounwind willreturn memory(argmem: read) }
attributes #3 = { nofree nounwind }
attributes #4 = { mustprogress nounwind willreturn allockind("free") memory(argmem: readwrite, inaccessiblemem: readwrite) "alloc-family"="malloc" }
attributes #5 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
